<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityOne">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/binContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/activity_one_title_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/binTitle"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/activity_one_type_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_one_title_textview"
            android:hint="@string/binTypeHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/binSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/activity_one_type_edittext"
            android:layout_below="@+id/activity_one_type_edittext"
            android:ems="11"
            android:hint="@string/binSizeHint"
            android:inputType="number" />

        <EditText
            android:id="@+id/nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/activity_one_type_edittext"
            android:layout_below="@+id/activity_one_type_edittext"
            android:layout_marginRight="12dp"
            android:ems="2"
            android:inputType="text"
            android:text="@string/nr" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/binContainer"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/clearText" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/resetText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/rotateButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/rotateButtonText" />


    </LinearLayout>
</RelativeLayout>
